--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -36,20 +36,33 @@
 </nav>
 
 <div class="container-fluid">
+
     {% if grade > 80 %}
-    <div class="alert alert-success">
-       <!--HINT Display passed info -->
-    </div>
-        {% else %}
+        <div class="alert alert-success">
+           <strong>Congratulation, {{ user.first_name }}!</strong>
+            You passed the exam and completed the course with score {{ grade }} / 100
+        </div>
+    {% else %}
         <div class="alert alert-danger">
-            <!--HINT Display failed info -->
+            Failed Sorry {{ user.first_name }}! You have failed with score {{ grade }} / 100
         </div>
         <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
         {% endif %}
         <div class="card-columns-vertical mt-1">
         <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
+            {%  for question in course.question_set.all %}
+                <h1>{{question}}</h1>
+                    {%  for choice in question.choice_set.all %}
+                        {%  if choice.is_correct %}
+                            <div class="alert alert-success">{{ choice }}</div>
+                        {%  else %}
+                            <div class="alert alert-light">{{ choice }}</div>
+                        {% endif %}
+
+                    {%  endfor %}
+            {%  endfor %}
         </div>
+
     </div>
 </body>
 </html>
