--- a/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
@@ -1,42 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
+{%  extends 'onlinecourse/base.html' %}
+
 <head>
-    {% load static %}
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <meta charset="UTF-8">
     <title>Online Courses</title>
 </head>
 <body>
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-light bg-light">
-        <div class="container-fluid">
-            <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Online Course</a>
-            </div>
-            <ul class="nav navbar-nav navbar-right">
-                {% if user.is_authenticated %}
-                <li>
-                    <a class="btn btn-link" href="#">{{ user.first_name }}({{ user.username }})</a>
-                    <a class="btn btn-link" href="{% url 'onlinecourse:logout' %}">Logout</a>
-                </li>
-                {% else %}
-                <li>
-                    <form class="form-inline" action="{% url 'onlinecourse:login' %}" method="post">
-                        {% csrf_token %}
-                        <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Username" name="username" >
-                            <input type="password" class="form-control" placeholder="Username" name="psw" >
-                            <button class="btn btn-primary" type="submit">Login</button>
-                            <a class="btn btn-link" href="{% url 'onlinecourse:registration' %}">Sign Up</a>
-                        </div>
-                    </form>
-                </li>
-                {% endif %}
-            </ul>
-        </div>
-    </nav>
+{% block content %}
 
-    <!-- Page content -->
     {% if course_list %}
         <div class="container">
             <div class="card-deck">
@@ -61,5 +30,7 @@
     {% else %}
         <p>No courses are available.</p>
     {% endif %}
+
+{% endblock content %}
 </body>
 </html>
