fixing some block typos

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -1,7 +1,10 @@
 {%  extends 'onlinecourse/base.html' %}
 
-<title>Course details</title>
-
+<head>
+    {% block content %}
+    <title>Course details</title>
+    {% endblock content %}
+</head>
 <body>
 {% block content %}
 
