--- a/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_list_bootstrap.html
@@ -1,7 +1,9 @@
 {%  extends 'onlinecourse/base.html' %}
 
 <head>
+    {% block content %}
     <title>Online Courses</title>
+    {% endblock content %}
 </head>
 <body>
 {% block content %}
