--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -1,7 +1,9 @@
 {%  extends 'onlinecourse/base.html' %}
-
-<title>Result</title>
-
+<head>
+    {% block content %}
+    <title>Result</title>
+    {% endblock content %}
+</head>
 <body>
 {% block content %}
 
