--- a/onlinecourse/templates/onlinecourse/user_registration_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/user_registration_bootstrap.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    {% block content %}
     <title>Registration</title>
+    {% endblock content %}
 </head>
 <body>
 {% block content %}
@@ -30,5 +32,5 @@
         </div>
     </form>
 
-{% endblock content %
+{% endblock content %}
 </body>
