fixing some block typos 2

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -1,9 +1,9 @@
 {%  extends 'onlinecourse/base.html' %}
 
 <head>
-    {% block content %}
+    {% block title %}
     <title>Course details</title>
-    {% endblock content %}
+    {% endblock title %}
 </head>
 <body>
 {% block content %}
