--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -1,8 +1,8 @@
 {%  extends 'onlinecourse/base.html' %}
 <head>
-    {% block content %}
+    {% block title %}
     <title>Result</title>
-    {% endblock content %}
+    {% endblock title %}
 </head>
 <body>
 {% block content %}
