--- a/onlinecourse/templates/onlinecourse/user_login_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/user_login_bootstrap.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% block content %}
+    {% block title %}
     <title>Login</title>
-    {% endblock content %}
+    {% endblock title %}
 </head>
 <body>
 {% block content %}
